--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -19,26 +19,36 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
-            - name: Git identity
-              run: |
-                git config user.name github-actions[bot]
-                git config user.email github-actions[bot]@users.noreply.github.com
+            - name: Cache Julia packages
+              uses: actions/cache@v3
+              with:
+                path: ~/.julia
+                key: ${{ runner.os }}-julia-${{ hashFiles('scripts/fetch_and_generate_docs.jl') }}
 
             - name: Set up Julia
               uses: julia-actions/setup-julia@v1
               with:
                 version: '1.10'
 
-            - name: Generate docs
+            - name: Generate algorithm docs
               run: julia scripts/fetch_and_generate_docs.jl
 
-            - name: Set up Python
+            - name: Set up Python & install MkDocs
               uses: actions/setup-python@v4
               with:
-                python-version: 3.x
+                python-version: '3.x'
 
-            - name: Install tools
-              run: pip install mkdocs-material mkdocs-awesome-pages-plugin ghp-import
+            - name: Cache pip packages
+              uses: actions/cache@v3
+              with:
+                path: ~/.cache/pip
+                key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') || 'mkdocs' }}
 
-            - name: Deploy manually via ghp-import
-              run: ghp-import -n -f -p build
+            - name: Install MkDocs and plugins
+              run: pip install mkdocs-material mkdocs-awesome-pages-plugin
+
+            - name: Deploy to GitHub Pages
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                github_token: ${{ secrets.GITHUB_TOKEN }}
+                publish_dir: build
