--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,8 @@ on:
         branches:
             - main
             - master
-    schedule:
-        - cron: '0 * * * *'
+#     schedule:
+#         - cron: '0 * * * *'
 
 permissions:
     contents: write
