--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,17 +6,17 @@ repo_url: https://github.com/yifen9/algo-notes
 
 theme:
   name: material
-# custom_dir: docs/overrides
+  custom_dir: docs/overrides
   palette:
     - scheme: default
-#     primary: custom   # Custom color defined in extra CSS
-#     accent: red
+      primary: custom   # Custom color defined in extra CSS
+      accent: red
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
     - scheme: slate
-#     primary: custom
-#     accent: red
+      primary: custom
+      accent: red
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
@@ -50,14 +50,14 @@ extra:
       link: https://t.me/yifen9
 
 # Custom CSS and JS for layout + logo effects
-# extra_css:
-#   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css
-#   - overrides/extra.css
-# extra_javascript:
-#   - https://cdnjs.cloudflare.com/ajax/libs/tablesort/5.2.1/tablesort.min.js
-#   - overrides/extra.js
-#   - https://polyfill.io/v3/polyfill.min.js?features=es6
-#   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+extra_css:
+  - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css
+  - overrides/extra.css
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/tablesort/5.2.1/tablesort.min.js
+  - overrides/extra.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 # Markdown features
 markdown_extensions:
@@ -84,4 +84,4 @@ plugins:
 
 nav:
   - Home:
-      - index.md
+    - index.md
