--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,15 +6,14 @@ repo_url: https://github.com/yifen9/algo-notes
 
 theme:
   name: material
-#   custom_dir: docs/overrides
+  custom_dir: docs/overrides
   palette:
+    - primary: white
     - scheme: default
-      primary: black
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
     - scheme: slate
-      primary: black
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
