--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,12 +8,15 @@ theme:
   name: material
   custom_dir: docs/overrides
   palette:
-    - primary: white
     - scheme: default
+      primary: custom
+      accent: white
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
     - scheme: slate
+      primary: custom
+      accent: black
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
