--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,7 @@ markdown_extensions:
       linenums_style: pymdownx-inline
   - pymdownx.inlinehilite
   - pymdownx.superfences
+  - pymdownx.tabbed
   - toc:
       permalink: true
 
