--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ markdown_extensions:
   - admonition
   - codehilite:
       guess_lang: false
+  - md_in_html
   - meta
   - pymdownx.arithmatex:
       generic: true
