--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
           python-version: 3.x
 
       - name: Install MkDocs and plugins
-        run: pip install mkdocs-material mkdocs-awesome-pages-plugin mkdocs-include-markdown-plugin ghp-import
+        run: pip install mkdocs-material mkdocs-awesome-pages-plugin mkdocs-breadcrumbs-plugin mkdocs-include-markdown-plugin ghp-import
 
       - name: Build site and copy src/
         run: |
