--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,9 +81,9 @@ markdown_extensions:
 # Plugins
 plugins:
   - awesome-pages
-  - breadcrumbs:
-      separator: " > "
-      show_home: false
+  - mkdocs-breadcrumbs-plugin:
+      delimiter: " > "
+      generate_home_index: false
   - include-markdown:
       preserve_includer_indent: true
   - search
