--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,8 +74,7 @@ markdown_extensions:
       linenums_style: pymdownx-inline
   - pymdownx.inlinehilite
   - pymdownx.superfences
-  - pymdownx.tabbed:
-      alternate_style: true
+  - pymdownx.tabbed
   - toc:
       permalink: true
 
