--- a/.github/workflows/deploy_atcoder.yml
+++ b/.github/workflows/deploy_atcoder.yml
@@ -8,7 +8,7 @@ on:
     paths:
       - '.github/workflows/deploy_atcoder.yml'
       - 'mkdocs.yml'
-      - 'scripts/generate_docs.jl'
+      - 'scripts/generate_docs_atcoder.jl'
       - 'src/atcoder/**'
   schedule:
     - cron: '0 * * * *'
