--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,8 +82,7 @@ markdown_extensions:
 # Plugins
 plugins:
   - awesome-pages
-  - include-markdown:
-      preserve-includer-indent: true
+  - include-markdown
   - search
 
 nav:
