--- a/.github/workflows/fetch_atcoder.yml
+++ b/.github/workflows/fetch_atcoder.yml
@@ -33,10 +33,10 @@ jobs:
         with:
           version: '1.10'
 
-      - name: Install Pandoc
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y pandoc
+      # - name: Install Pandoc
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y pandoc
 
       - name: Fetch AtCoder
         run: julia scripts/fetch/atcoder.jl
