--- a/.github/workflows/atcoder.yml
+++ b/.github/workflows/atcoder.yml
@@ -10,7 +10,7 @@ on:
       - 'scripts/atcoder/**'
       - 'src/atcoder/**'
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 0,6,12,18 * * *'
 
 permissions:
   contents: write
