--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-src/atcoder/*/description_*.md
-src/atcoder/*/*/description_*.md
-src/atcoder/*/*/*/description_*.md
+src/atcoder/*/*.md
+src/atcoder/*/*/*.md
+src/atcoder/*/*/*/*.md
