--- a/.github/workflows/atcoder.yml
+++ b/.github/workflows/atcoder.yml
@@ -40,8 +40,8 @@ jobs:
       - name: Initialize
         run: julia scripts/atcoder/initialize.jl
 
-      - name: Fetch
-        run: julia scripts/atcoder/fetch.jl
+      - name: Fetch Statement
+        run: julia scripts/atcoder/fetch_statement.jl
       
       - name: Generate
         run: julia scripts/atcoder/generate.jl
