--- a/.github/workflows/atcoder_user.yml
+++ b/.github/workflows/atcoder_user.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'mkdocs.yml'
-      - 'scripts/atcoder/fetch_user'
+      - 'scripts/atcoder/fetch_user.jl'
   schedule:
     - cron: '0 * * * *'
 
