--- a/.github/workflows/atcoder_fetch_statement.yml
+++ b/.github/workflows/atcoder_fetch_statement.yml
@@ -1,4 +1,4 @@
-name: atcoder_main
+name: atcoder_fetch_statement
 
 on:
   push:
@@ -42,8 +42,8 @@ jobs:
       - name: Fetch Statement
         run: julia scripts/atcoder/fetch_statement.jl
       
-      - name: Generate
-        run: julia scripts/atcoder/generate.jl
+      # - name: Generate
+      #   run: julia scripts/atcoder/generate.jl
 
       - name: Set up Python
         uses: actions/setup-python@v4
