--- a/.github/workflows/atcoder_fetch_user.yml
+++ b/.github/workflows/atcoder_fetch_user.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Fetch User
         run: julia scripts/atcoder/fetch_user.jl
       
-      # - name: Generate
-      #   run: julia scripts/atcoder/generate.jl
+      - name: Generate
+        run: julia scripts/atcoder/generate.jl
 
       - name: Set up Python
         uses: actions/setup-python@v4
