--- a/.github/workflows/atcoder_fetch_user.yml
+++ b/.github/workflows/atcoder_fetch_user.yml
@@ -36,12 +36,11 @@ jobs:
 
       - name: Fetch User
         run: julia scripts/atcoder/fetch_user.jl
-      
-      - name: Sync with origin/main
+
+      - name: Sync
         run: |
-          git checkout main
           git fetch origin main
-          git reset --hard origin/main
+          git rebase origin/main
       
       - name: Commit & Push changes
         run: |
