--- a/.github/workflows/atcoder_fetch_user.yml
+++ b/.github/workflows/atcoder_fetch_user.yml
@@ -11,6 +11,10 @@ on:
   schedule:
     - cron: '0 * * * *'
 
+concurrency:
+  group: atcoder_fetch
+  cancel-in-progress: false
+
 permissions:
   contents: write
 
@@ -23,6 +27,11 @@ jobs:
         with:
           persist-credentials: true
           fetch-depth: 0
+      
+      - name: Sync to origin/main
+        run: |
+          git fetch origin main
+          git reset --hard origin/main
 
       - name: Set up Git identity
         run: |
@@ -37,13 +46,14 @@ jobs:
       - name: Fetch User
         run: julia scripts/atcoder/fetch_user.jl
 
-      - name: Sync
-        run: |
-          git fetch origin main
-          git rebase origin/main
-      
-      - name: Commit & Push changes
+      - name: Commit fetched files
         run: |
           git add src/atcoder
-          git diff --cached --quiet || git commit -m "chore: update fetched user"
-          git push
+          git diff --staged --quiet || git commit -m "chore: update fetched user"
+        
+      - name: Rebase onto origin/main
+        run: |
+          git pull --rebase --autostash origin main
+        
+      - name: Push back
+        run: git push origin main
