--- a/.github/workflows/arcoder_generate.yml
+++ b/.github/workflows/arcoder_generate.yml
@@ -27,6 +27,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Sync to origin/main
+        run: |
+          git fetch origin main
+          git reset --hard origin/main
+
       - name: Set up Git identity
         run: |
           git config user.name github-actions[bot]
