--- a/.github/workflows/atcoder_fetch_statement.yml
+++ b/.github/workflows/atcoder_fetch_statement.yml
@@ -34,13 +34,13 @@ jobs:
           git fetch origin main
           git reset --hard origin/main
 
-      - name: Set up Git identity
+      - name: Set up
         run: |
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
 
       - name: Set up Julia
-        uses: julia-actions/setup-julia@v1
+        uses: julia-actions/setup-julia@v2
         with:
           version: '1.10'
 
@@ -55,7 +55,7 @@ jobs:
       - name: Fetch Statement
         run: julia scripts/atcoder/fetch_statement.jl
       
-      - name: Commit fetched files
+      - name: Commit
         run: |
           git add src/atcoder
           git diff --staged --quiet || git commit -m "chore: update fetched statement"
