--- a/.github/workflows/atcoder_generate.yml
+++ b/.github/workflows/atcoder_generate.yml
@@ -105,5 +105,5 @@ jobs:
 
       - name: Push to gh-pages
         run: |
-          ghp-import -n -f -b gh-pages build
+          ghp-import -n -f -b gh-pages github-pages
           git push origin gh-pages
