--- a/.github/workflows/atcoder_generate.yml
+++ b/.github/workflows/atcoder_generate.yml
@@ -26,7 +26,7 @@ permissions:
   pages: write
 
 jobs:
-  build:
+  generate:
     if: ${{ github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
@@ -73,36 +73,4 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: build
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Configure Pages
-        uses: actions/configure-pages@v5
-
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
-
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
-  
-  backup:
-    needs: deploy
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
-
-      - name: Setup Git
-        run: |
-          git config user.name github-actions[bot]
-          git config user.email github-actions[bot]@users.noreply.github.com
-
-      - name: Install ghp-import
-        run: pip install ghp-import
-
-      - name: Push to gh-pages
-        run: |
-          ghp-import -n -f -p -b gh-pages github-pages
+          retention-days: 1
