--- a/.github/workflows/atcoder_generate.yml
+++ b/.github/workflows/atcoder_generate.yml
@@ -74,3 +74,40 @@ jobs:
         with:
           path: build
           retention-days: 1
+
+  deploy:
+    needs: generate
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
+
+      - name: Download for Pages
+        uses: actions/download-artifact@v4
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
+
+  backup:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
+      
+      - name: Setup Git
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email github-actions[bot]@users.noreply.github.com
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+
+      - name: Install ghp-import
+        run: pip install ghp-import
+
+      - name: Backup to gh-pages
+        run: |
+          ghp-import -n -f -p -b gh-pages build
