--- a/.github/workflows/atcoder_generate.yml
+++ b/.github/workflows/atcoder_generate.yml
@@ -69,9 +69,16 @@ jobs:
       # - name: Deploy
       #   run: ghp-import -n -f -p build
       
-      - name: Upload Artifact
+      - name: Upload Artifact for Deploy
         uses: actions/upload-pages-artifact@v3
         with:
+          path: build
+          retention-days: 1
+      
+      - name: Upload Artifact for Backup
+        uses: actions/upload-artifact@v3
+        with:
+          name: build
           path: build
           retention-days: 1
 
@@ -82,9 +89,6 @@ jobs:
       - name: Configure Pages
         uses: actions/configure-pages@v5
 
-      - name: Download for Pages
-        uses: actions/download-artifact@v4
-
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
 
@@ -92,8 +96,11 @@ jobs:
     needs: deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Download Artifact
+      - name: Download Artifact for Backup
         uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: build
       
       - name: Setup Git
         run: |
