--- a/.github/workflows/atcoder_generate.yml
+++ b/.github/workflows/atcoder_generate.yml
@@ -78,7 +78,6 @@ jobs:
       - name: Upload Artifact for Backup
         uses: actions/upload-artifact@v4
         with:
-          name: build
           path: build
           retention-days: 1
 
@@ -101,7 +100,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: build
+          name: github-pages
           path: build
 
       - name: Set up Python
