--- a/.github/workflows/atcoder_generate.yml
+++ b/.github/workflows/atcoder_generate.yml
@@ -116,4 +116,4 @@ jobs:
       - name: Delete Artifact
         uses: geekyeggo/delete-artifact@v5
         with:
-          name: artifact
+          name: github-pages
