--- a/.github/workflows/atcoder_generate.yml
+++ b/.github/workflows/atcoder_generate.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Extract Pages artifact
+      - name: Extract Artifact
         uses: yifen9/extract-artifact@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
