--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,6 +84,9 @@ markdown_extensions:
 # Plugins
 plugins:
   - awesome-pages
+  - exclude:
+      glob:
+        - src/*
   - include-markdown
   - search
 
