--- a/.github/workflows/atcoder_generate.yml
+++ b/.github/workflows/atcoder_generate.yml
@@ -32,13 +32,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Sync to origin/main
         run: |
           git fetch origin main
           git reset --hard origin/main
 
-      - name: Set up Git
+      - name: Set up Action Bot
         run: |
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
@@ -48,6 +50,14 @@ jobs:
         with:
           version: '1.10'
       
+      - name: Cache Julia packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.julia
+          key: ${{ runner.os }}-julia-${{ hashFiles('scripts/atcoder/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-julia-
+      
       - name: Generate
         run: julia scripts/atcoder/generate.jl
 
@@ -55,9 +65,17 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.x
+      
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-      - name: Install MkDocs
-        run: pip install mkdocs-material mkdocs-awesome-pages-plugin mkdocs-exclude mkdocs-include-markdown-plugin
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       
       - name: Link /src
         run: ln -s ../src docs/src
